[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/menus/Text.gd" type="Script" id=1]
[ext_resource path="res://players/Player/Guide.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Dialog" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayStart" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="MarginContainer"]
margin_right = 300.0
margin_bottom = 100.0
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( -20, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
[connection signal="timeout" from="DelayStart" to="." method="_on_DelayStart_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
